<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerAboutUs">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">




    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hey"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold">
    </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="match_parent"
            android:text="@string/hey1"
            android:textSize="15sp">

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hey2"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="match_parent"
            android:text="@string/hey3"
            android:textSize="15sp">

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hey4"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="match_parent"
            android:text="@string/hey5"
            android:textSize="15sp">

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hey6"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="match_parent"
            android:text="@string/hey7"
            android:textSize="15sp">

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="match_parent"
            android:text="@string/hey5"
            android:textSize="15sp">

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hey8"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="match_parent"
            android:text="@string/hey9"
            android:textSize="15sp">

        </TextView>


    </LinearLayout>



</ScrollView>